# nordnotes

./: README.md
be-java/: README.md  pom.xml
be-python/: README.md  nordnotes.py  run.sh
be-python/common/: result.py
be-python/controllers/: system_controller.py
be-rust/: .gitignore  Cargo.toml  README.md  Taskfile.yml
be-rust/src/: controllers.rs  dto.rs  entities.rs  errors.rs  main.rs  notes.rs  params.rs  repositories.rs  server.rs  storage.rs  users.rs  utils.rs
be-rust/src/controllers/: auth.rs  mod.rs  notes.rs  roles.rs  users.rs
be-rust/src/entities/: mod.rs  note.rs  role.rs  user.rs
be-rust/src/handlers/: auth.rs  mod.rs  notes.rs  roles.rs  system.rs
be-rust/src/repositories/: mod.rs  notes.rs  roles.rs  users.rs
be-rust/src/services/: mod.rs  roles.rs  system.rs
db-scylla/: README.md  docker-compose.yml
fe-ts/: package-lock.json  package.json  preprocess.sh  webpack.common.js  webpack.dev.js
fe-ts/src/: index.html  index.ts  style.css
fe-ts/src/app/: App.css  App.html  App.ts
fe-ts/src/common/: Configuration.ts  Utils.ts
fe-ts/src/model/: Error.ts  Note.ts  Token.ts
fe-ts/src/services/: AuthorizationService.ts  NoteService.ts
te-bash/: run.sh
te-bash/test_cases/delete_notes/: data.json  expected  run.sh
te-bash/test_cases/get_note/: run.sh
te-bash/test_cases/get_note_fail/: expected  run.sh
te-bash/test_cases/list_notes/: run.sh
te-bash/test_cases/login_fail/: expected  run.sh
te-bash/test_cases/login_success/: run.sh
te-go/: .gitignore  README.md  build.sh  deps.sh
te-go/src/tests/: main.go
(+50 files in other folders)
