[package]
name = "nordnotes"
version = "1.0.0"
authors = ["Dariusz Depta <dariusz.depta@engos.software>"]
description = "Nordic notes"
repository = "https://github.com/DariuszDepta/nordnotes.git"
license = "MIT"
edition = "2021"

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
lazy_static = "1.4.0"
scylla = "0.4.2"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
time = { version = "0.3.7", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }